broken file issue recolved